module(name = "capture-sdk")

####################
# Constants
####################

RUST_VERSION = "1.93.0"

OKHTTP_VERSION = "4.12.0"

LIFECYCLE_VERSION = "2.8.7"

COMPOSE_VERSION = "1.7.6"

COMPOSE_COMPILER_VERSION = "1.5.15"

KOTLIN_COMPILE_VERSION = "2.1.21"

KOTLIN_COMPILER_SHA = "6ab72d6144e71cbbc380b770c2ad380972548c63ab6ed4c79f11c88f2967332e"

KOTLIN_STD_VERSION = "1.9.25"

NDK_API_LEVEL = 21

SDK_API_LEVEL = 36

SDK_BUILD_TOOLS_VERSION = "36.1.0"

####################
# Bazel dependencies
####################

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

new_git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

bazel_dep(name = "rules_robolectric", version = "4.14.1.2")
bazel_dep(name = "rules_multirun", version = "0.10.0")
bazel_dep(name = "apple_support", version = "1.22.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_swift", version = "2.9.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_xcodeproj", version = "2.12.1")
bazel_dep(name = "rules_apple", version = "4.1.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_android", version = "0.6.4")
bazel_dep(name = "rules_android_ndk", version = "0.1.3")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_detekt", version = "0.8.1.2")
bazel_dep(name = "flatbuffers", version = "25.2.10")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_kotlin", version = "2.1.9")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_rust", version = "0.65.0")
bazel_dep(name = "rules_shell", version = "0.4.0")

# Required by android_artifacts for pom_file, it's not in bazel central registry
bazel_dep(name = "google_bazel_common", version = "0.0.1")

http_jar(
    name = "bazel_diff",
    integrity = "sha256-Sn3WTHsfsSGbglE4xiwgbSrOdHCqXToHpVRTLnQEiJM=",
    url = "https://github.com/Tinder/bazel-diff/releases/download/9.0.3/bazel-diff_deploy.jar",
)

new_git_repository(
    name = "bitdrift_api",
    build_file = "//bazel:BUILD.bitdriftlabs_api",
    commit = "250f755b39343c90742250a1ae8d9f73b8423df7",
    remote = "https://github.com/bitdriftlabs/api.git",
)

new_git_repository(
    name = "kscrash",
    build_file = "//bazel:BUILD.kscrash",
    commit = "f0241a44f723a6b29c9db2a303917e89256a2557",
    remote = "https://github.com/kstenerud/KSCrash.git",
)

git_override(
    module_name = "google_bazel_common",
    commit = "c35b0339ae7d7ac95761f69f4a0eed033163cc80",
    remote = "https://github.com/google/bazel-common",
)

http_archive(
    name = "Difference",
    build_file = "@//bazel/third_party:Difference.BUILD",
    sha256 = "7ffc131fd19b7c1ea390d186b942aa6b7ff732add9e6df34281fe9f777656968",
    strip_prefix = "Difference-1.1.0",
    urls = ["https://github.com/krzysztofzablocki/Difference/archive/1.1.0.tar.gz"],
)

http_archive(
    name = "SwiftBenchmark",
    build_file = "@//bazel/third_party:SwiftBenchmark.BUILD",
    sha256 = "9c5bccfbddaeed7d3aa731118644655c0e550ab2267e1a3238ca0daa06ade0f9",
    strip_prefix = "swift-benchmark-0.1.2",
    urls = ["https://github.com/google/swift-benchmark/archive/0.1.2.tar.gz"],
)

http_archive(
    name = "SwiftArgumentParser",
    build_file = "@//bazel/third_party:SwiftArgumentParser.BUILD",
    sha256 = "946a4cf7bdd2e4f0f8b82864c56332238ba3f0a929c6d1a15f55affdb10634e6",
    strip_prefix = "swift-argument-parser-1.5.0",
    urls = ["https://github.com/apple/swift-argument-parser/archive/1.5.0.tar.gz"],
)

http_archive(
    name = "DrString",
    build_file_content = """exports_files(["drstring"])""",
    sha256 = "99833f0ad3d9f3bbf40aee88c6f959a0a9b03e3b7b34e2fca660644e13c1f3ef",
    url = "https://github.com/dduan/DrString/releases/download/0.6.1/drstring-universal-apple-darwin.tar.gz",
)

http_archive(
    name = "DrString_Linux",
    build_file_content = """
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
native_binary(
    name = "DrString_Linux",
    src = "usr/bin/drstring",
    out = "usr/bin/drstring",
    visibility = ["//visibility:public"],
)
    """,
    sha256 = "50cbf3dbb9b675d7bd179b02e7925f3729d2e0c8c9fd4df09ea1cd2f15c50205",
    url = "https://github.com/dduan/DrString/releases/download/0.6.1/drstring-x86_64-unknown-ubuntu.tar.gz",
)

####################
# Android extensions
####################

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
android_sdk_repository_extension.configure(
    api_level = SDK_API_LEVEL,
    build_tools_version = SDK_BUILD_TOOLS_VERSION,
)

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
android_ndk_repository_extension.configure(api_level = NDK_API_LEVEL)
use_repo(android_ndk_repository_extension, "androidndk")

register_toolchains("@androidndk//:all")

register_toolchains("//:kotlin_toolchain")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "com.squareup.okio:okio:3.10.2",
        "com.squareup.okio:okio-jvm:3.10.2",
        "com.google.code.findbugs:jsr305:3.0.2",

        # Dokka (javadocs generator)
        "org.jetbrains.dokka:analysis-kotlin-descriptors:1.9.10",
        "org.jetbrains.dokka:dokka-base:1.9.10",
        "org.jetbrains.dokka:dokka-cli:1.9.10",

        # Library dependencies
        "com.google.code.gson:gson:2.10.1",
        "com.squareup.okhttp3:okhttp:{}".format(OKHTTP_VERSION),
        "androidx.startup:startup-runtime:1.2.0",
        "androidx.core:core:1.13.1",
        "com.google.guava:listenablefuture:1.0",  #required by androidx.lifecycle:lifecycle-process below
        "androidx.lifecycle:lifecycle-common:{}".format(LIFECYCLE_VERSION),
        "androidx.lifecycle:lifecycle-process:{}".format(LIFECYCLE_VERSION),
        "org.jetbrains.kotlin:kotlin-stdlib:{}".format(KOTLIN_STD_VERSION),
        "androidx.emoji2:emoji2:1.5.0",
        "androidx.collection:collection:1.4.5",
        "androidx.metrics:metrics-performance:1.0.0-beta02",
        "com.google.flatbuffers:flatbuffers-java:25.2.10",
        "com.google.protobuf:protobuf-kotlin-lite:4.31.1",

        # Compose
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:{}".format(KOTLIN_COMPILE_VERSION),
        "org.jetbrains:annotations:26.0.1",
        "androidx.core:core-ktx:1.13.1",
        "androidx.appcompat:appcompat:1.7.0",
        "androidx.activity:activity-compose:1.9.3",
        "androidx.compose.material:material:{}".format(COMPOSE_VERSION),
        "androidx.compose.ui:ui:{}".format(COMPOSE_VERSION),
        "androidx.compose.ui:ui-tooling:{}".format(COMPOSE_VERSION),
        "androidx.compose.runtime:runtime:{}".format(COMPOSE_VERSION),
        "androidx.annotation:annotation-jvm:1.9.1",

        # Compile-only via wrapper target; not on runtime classpath
        "com.squareup.retrofit2:retrofit:3.0.0",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_starlark_android_rules = True,
    version_conflict_policy = "pinned",
)

# Test artifacts
maven.artifact(
    testonly = True,
    artifact = "mockito-core",
    group = "org.mockito",
    version = "4.11.0",
)
maven.artifact(
    testonly = True,
    artifact = "mockito-inline",
    group = "org.mockito",
    version = "4.11.0",
)
maven.artifact(
    testonly = True,
    artifact = "mockito-kotlin",
    group = "com.nhaarman.mockitokotlin2",
    version = "2.2.0",
)
maven.artifact(
    testonly = True,
    artifact = "core",
    group = "androidx.test",
    version = "1.6.0",
)
maven.artifact(
    testonly = True,
    artifact = "robolectric",
    group = "org.robolectric",
    version = "4.14",
)
maven.artifact(
    testonly = True,
    artifact = "android-all",
    group = "org.robolectric",
    version = "15-robolectric-12650502",
)
maven.artifact(
    testonly = True,
    artifact = "assertj-core",
    group = "org.assertj",
    version = "3.22.0",
)
maven.artifact(
    testonly = True,
    artifact = "mockwebserver",
    group = "com.squareup.okhttp3",
    version = OKHTTP_VERSION,
)
maven.artifact(
    testonly = True,
    artifact = "junit",
    group = "junit",
    version = "4.13.2",
)
maven.artifact(
    testonly = True,
    artifact = "classgraph",
    group = "io.github.classgraph",
    version = "4.8.146",
)
use_repo(maven, "maven")

####################
# Rust extensions
####################

single_version_override(
    module_name = "rules_rust",
    patches = ["//bazel/third_party/patches:rules_rust.patch"],
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    # Rules rust defaults to using an allocator library that is outdated. One would hope you can set your own here
    # but I couldn't find a way to pass it in, since all lables here are local to rules_rust (ie you can't pass //core/alloc).
    allocator_library = "@rules_rust//ffi/cc/allocator_library:noop",
    extra_target_triples = [
        "aarch64-apple-ios-sim",
        "aarch64-apple-ios",
        "aarch64-linux-android",
        "armv7-linux-androideabi",
        "i686-linux-android",
        "x86_64-apple-ios",
        "x86_64-linux-android",
    ],
    rustfmt_version = "nightly/2026-01-22",
    # We need this shas, since these archives are generated by us and we want to make sure we always use these as opposed
    # to the official ones. There is a `rust_std_checksum.sh` script that generates these shas in the `tools` directory.
    # For security reasons, we include all shas here to make sure that a malicious actor with access to rust-std-mobile
    # can't include a compromised tool.
    #
    # tl;dr; run e.g. $ ./tools/rust_std_checksum.sh 1.82.0
    sha256s = {
        "rust-std-" + RUST_VERSION + "-aarch64-apple-ios-sim.tar.gz": "dcd3e9330776edb2ad409b20b52771f9ca4ae0304a8472260e392979be458e93",
        "rust-std-" + RUST_VERSION + "-aarch64-apple-ios.tar.gz": "6c56099ea2b82b290b9e1bf702adfb082920f929b582336c5aad389ecf422146",
        "rust-std-" + RUST_VERSION + "-x86_64-apple-ios.tar.gz": "7f0307b7e240a576f5225a5286f116fcdbf755a0a11912e19e8eb838870926ae",
        "rust-std-" + RUST_VERSION + "-aarch64-linux-android.tar.gz": "999b9fa2ccde1c5a301e03c6187edd7c586a9f0f674fbdc4bfcdae0df6733246",
        "rust-std-" + RUST_VERSION + "-armv7-linux-androideabi.tar.gz": "e968ce5230ee75d434e90137e2834c8e4beaf13424b193f2abb676f6a77c1f82",
        "rust-std-" + RUST_VERSION + "-i686-linux-android.tar.gz": "8e05d722fa98ec545cf4017088194f10b97754fcc79b0b5fd998b45408833abb",
        "rustc-" + RUST_VERSION + "-aarch64-apple-darwin.tar.gz": "4b5cf30c0d552ac8a292854e7d96ee65e0f1c6fdce22e30ee6295558bccbd16b",
        "cargo-" + RUST_VERSION + "-aarch64-apple-darwin.tar.gz": "904b6638bb2dcc274b03aaae322ce5a98704f8333f5343f351cfbd7cf12df869",
        "llvm-tools-" + RUST_VERSION + "-aarch64-apple-darwin.tar.gz": "f9a5396dce01e7c8ed87e7400ac5701260b9a58a151c2b8057bfe708886ca4f0",
        "rust-std-" + RUST_VERSION + "-aarch64-apple-darwin.tar.gz": "154c3f22a7d4ce6a47f02e2d7817115f11b1f8c0e191b55b59099324d402eed2",
        "clippy-" + RUST_VERSION + "-aarch64-apple-darwin.tar.gz": "9478d089ed5a3c80193cda7f85f0bb3b90cd417f05d3948be167bddff15bc8d8",
        "rustfmt-" + RUST_VERSION + "-aarch64-apple-darwin.tar.gz": "b83585706445a2886b7912c3dd381adae7a21fef670d3facc7fbe3b862a65ddf",
        "rustc-" + RUST_VERSION + "-x86_64-unknown-linux-gnu.tar.gz": "9e35d0d8251db1fff243fe36e417263f7dd48c9ec7c61f8c13560f7e21a37f46",
        "cargo-" + RUST_VERSION + "-x86_64-unknown-linux-gnu.tar.gz": "c4ad6f857c3b72f1a515adc7d02fc1edd376a1313bb4edfdaffc1835cc920e37",
        "llvm-tools-" + RUST_VERSION + "-x86_64-unknown-linux-gnu.tar.gz": "880fbacccfdbce8c8f9b10c8fefe2183f694b753044930832f9a2335c97f0335",
        "rust-std-" + RUST_VERSION + "-x86_64-unknown-linux-gnu.tar.gz": "8e276f68c7793bbc18a2856a501dd6b296af2296d6482407762e3ce79a2221ff",
        "clippy-" + RUST_VERSION + "-x86_64-unknown-linux-gnu.tar.gz": "3e50c570c8c718aeca66c99717cb8f00ccbf45b12e3224085ffbc689c68922ed",
        "rustfmt-" + RUST_VERSION + "-x86_64-unknown-linux-gnu.tar.gz": "4f814484c3044068c649cbace543769960135ffc08583828ed6748f3159b7440",
    },
    urls = [
        # NOTE: `urls` are technically mirrors so we want to make sure we always try our own first then the official ones.
        # We'll ensure that the ones we want to serve always come from us by the previous sha256s dictionary. Please ensure
        # that the extensions on both of these are the same.
        "https://github.com/bitdriftlabs/rust-std-mobile/releases/download/" + RUST_VERSION + "/{}.tar.gz",

        # We need this because we only serve std for mobile archs but rustc, clippy, cargo, llvm-tools and even std for
        # apple-darwin/linux are served from the official mirror.
        "https://static.rust-lang.org/dist/{}.tar.gz",
    ],
    versions = [
        RUST_VERSION,
        "nightly/2026-01-22",
    ],
)
use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_config = "//:Cargo.toml",
    cargo_lockfile = "//:Cargo.lock",
    # This trades the chance that the registry gets corrupted for speed when repinning.
    isolated = False,
    lockfile = "//:Cargo.Bazel.lock",
    manifests = [
        "//:Cargo.toml",
        "//proto:Cargo.toml",
        "//platform/jvm:Cargo.toml",
        "//platform/jvm/core:Cargo.toml",
        "//test/platform/jvm:Cargo.toml",
        "//platform/shared:Cargo.toml",
        "//platform/swift/source:Cargo.toml",
        "//platform/test_helpers:Cargo.toml",
        "//test/platform/pom_checker:Cargo.toml",
        "//test/platform/swift/bridging:Cargo.toml",
        "//test/benchmark:Cargo.toml",
    ],
    supported_platform_triples = [
        "aarch64-apple-ios-sim",
        "aarch64-apple-ios",
        "aarch64-linux-android",
        "armv7-linux-androideabi",
        "i686-linux-android",
        "x86_64-apple-ios",
        "x86_64-linux-android",
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
)

# File generation must be skipped because of https://github.com/bazelbuild/rules_rust/issues/3552
crate.annotation(
    build_script_env = {"SKIP_PROTO_GEN": "1"},
    crate = "bd-grpc",
)
crate.annotation(
    build_script_env = {"SKIP_PROTO_GEN": "1"},
    crate = "bd-pgv",
)
crate.annotation(
    build_script_env = {"SKIP_PROTO_GEN": "1"},
    crate = "bd-proto",
)
crate.annotation(
    build_script_env = {"SKIP_FILE_GEN": "1"},
    crate = "bd-report-writer",
)
crate.annotation(
    build_script_env = {"SKIP_FILE_GEN": "1"},
    crate = "bd-bonjson-ffi",
)

# A recent rustix update seems to have broken something here, so manually add in the crates we need to build under Bazel.
crate.annotation(
    crate = "linux-raw-sys",
    crate_features = [
        "errno",
        "std",
        "general",
        "ioctl",
    ],
)
use_repo(crate, "crates")
