load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:bitdrift_build_system.bzl", "bitdrift_rust_library")

exports_files(["AndroidManifest.xml"])

# JNI Implementation

# This is Rust JNI implementation. Most of the logic lives here.
bitdrift_rust_library(
    name = "capture_jni",
    visibility = ["//visibility:public"],
    deps = [
        "//platform/shared:platform-shared",
    ],
    alwayslink = True,
)

# Concatenate the proguard files from the capture and replay libraries
genrule(
    name = "proguard",
    srcs = [
        "//platform/jvm/capture:consumer-rules.pro",
        "//platform/jvm/replay:consumer-rules.pro",
    ],
    outs = ["proguard.txt"],
    cmd = "cat $(SRCS) > $@",
    visibility = ["//visibility:public"],
)
