[package]
edition      = "2021"
license-file = "LICENSE"
name         = "capture"
publish      = false
version      = "1.0.0"

[dependencies]
android_logger.workspace        = true
anyhow.workspace                = true
async-trait.workspace           = true
bd-api.workspace                = true
bd-client-common.workspace      = true
bd-client-stats-store.workspace = true
bd-device.workspace             = true
bd-error-reporter.workspace     = true
bd-key-value.workspace          = true
bd-logger.workspace             = true
bd-runtime.workspace            = true
bd-session.workspace            = true
bd-time.workspace               = true
futures-util.workspace          = true
jni.workspace                   = true
libc.workspace                  = true
log.workspace                   = true
platform-shared.path            = "../shared"
time.workspace                  = true
tracing-subscriber.workspace    = true
uuid.workspace                  = true

[lib]
crate-type = ["cdylib"]
name       = "capture"
