[package]
edition      = "2021"
license-file = "LICENSE"
name         = "platform-shared"
publish      = false
version      = "1.0.0"

[dependencies]
anyhow.workspace                = true
bd-api.workspace                = true
bd-crash-handler.workspace      = true
bd-client-common.workspace      = true
bd-client-stats-store.workspace = true
bd-error-reporter.workspace     = true
bd-key-value.workspace          = true
bd-log-primitives.workspace     = true
bd-logger.workspace             = true
bd-runtime.workspace            = true
bd-session.workspace            = true
log.workspace                   = true
parking_lot.workspace           = true
regex.workspace                 = true
time.workspace                  = true
tokio.workspace                 = true

[dev-dependencies]
pretty_assertions.workspace = true
