[project]
name = "bdapi"
version = "0.1.0"
description = ""
authors = [
    { name = "bitdrift, Inc.", email = "info@bitdrift.io" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protobuf (>=5.0.0,<6.29.2)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "bdapi", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0" ]
build-backend = "poetry.core.masonry.api"
